# hv_characterization

./: .gitignore  CMakeLists.txt  Makefile  ProgOptions.cpp  README.md  build  check  clean  count_leaves.cpp  create_hv_mesh.cpp  create_hv_mesh.hpp  cube.h5m  cube.sat  diagram.txt  gen_mb_funcs.cpp  gen_mb_funcs.hpp  hexmaker.cpp  hexmaker.hpp  hexwriter.cpp  hexwriter.hpp  hv_cube.cpp  hv_mesh_gen.cpp  hv_mesh_gen.hpp  leafcounter.cpp  leafcounter.hpp  obbgraphwriter.hpp  obbhexwriter.cpp  obbhexwriter.hpp  plotly_plot.py  ray_fire.cpp  ray_fire.hpp  sweep.cpp  tag_tris_w_norm.cpp  test_model.cpp  timing_plot.p  timing_plot.py  write_obbs.cpp
cmake/: FindMOAB.cmake
single_ray_traversal/: CMakeLists.txt  ray_writer.cpp  ray_writer.hpp  traverse_ray.cpp
src/: CMakeLists.txt  README.rst  gen_mb_funcs.hpp  hv_mesh_gen.cpp  leafcounter.cpp  obb_graph.cpp  obbgraphwriter.cpp  obbhexwriter.hpp  ray_fire.cpp  ray_writer.cpp  sweep.cpp  traverse_ray.cpp
